# Codi

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  LICENSE  README.md  premake5.lua
Codi/: CMakeLists.txt  Codi.h  cdpch.h  premake5.lua
Codi/Codi/: Application.cpp  Application.h  Core.h  EntryPoint.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Test.cpp  Test.h  Window.h
Codi/Codi/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Codi/Codi/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Codi/Platform/Windows/: WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Codi/src/: Codi.h  cdpch.cpp  cdpch.h  codipch.cpp  codipch.h
Codi/src/Codi/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Codi/src/Codi/Core/: Application.cpp  Application.h  Assert.h  Clock.h  Core.h  DeltaTime.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Memory.h  MouseButtonCodes.h  PlatformDetection.h  Types.h  UUID.cpp  UUID.h  Window.h
Codi/src/Codi/Debug/: Instrumentor.h
Codi/src/Codi/Events/: ApplicationEvent.h  ApplicationEvents.h  Event.h  KeyEvent.h  KeyEvents.h  MouseEvent.h  MouseEvents.h
Codi/src/Codi/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Codi/src/Codi/Input/: Input.h  KeyCode.h  MouseCode.h
Codi/src/Codi/Math/: Math.cpp  Vertex3D.h  math.h
Codi/src/Codi/Renderer/: BatchRenderer.cpp  BatchRenderer.h  BatchRendererPlugin.h  Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  GeometryManager.cpp  GeometryManager.h  GraphicsContext.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  (+1 more)
Codi/src/Codi/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Codi/src/Codi/Utils/: PlatformUtils.h
Codi/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Codi/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanFramebuffers.cpp  VulkanFramebuffers.h  VulkanGlobalUniformRegistry.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h  VulkanVertexArray.h
Codi/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsInputUtils.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
CodiEditor/: CMakeLists.txt
CodiEditor/src/: CodiEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
CodiEditor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: imgui.ini  premake5.lua
Engine/Resources/Shaders/: Renderer2D_Quad.glsl
Engine/src/: EditorLayer.cpp  EditorLayer.h  EngineApp.cpp
Sandbox/: Application.cpp  CMakeLists.txt
Sandbox/src/: Application.cpp  Sandbox2D.cpp  Sandbox2D.h
